--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -386,6 +386,105 @@ pipelines:
       - datasets/MES_MD_SPEC
     subgraphs: []
     dependencies: {}
+          
+  pipelines/PPLN_MES_MD_OPR_1:
+                name: PPLN_MES_MD_OPR_1_mec
+                description: Mapping pipeline  ['mec']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_OPR
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_OPR_2:
+                name: PPLN_MES_MD_OPR_2_cmw_mdy_mer
+                description: Mapping pipeline  ['cmw', 'mdy', 'mer']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_OPR
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_OPR_3:
+                name: PPLN_MES_MD_OPR_3_mvc
+                description: Mapping pipeline  ['mvc']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_OPR
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_OPR_4:
+                name: PPLN_MES_MD_OPR_4_meb_mej_mes_mns
+                description: Mapping pipeline  ['meb', 'mej', 'mes', 'mns']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_OPR
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_OPR_5:
+                name: PPLN_MES_MD_OPR_5_mei
+                description: Mapping pipeline  ['mei']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_OPR
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_OPR_6:
+                name: PPLN_MES_MD_OPR_6_mem
+                description: Mapping pipeline  ['mem']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_OPR
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_OPR_7:
+                name: PPLN_MES_MD_OPR_7_mmt
+                description: Mapping pipeline  ['mmt']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_OPR
+                dependencies: {}
+    
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
