--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -386,6 +386,147 @@ pipelines:
       - datasets/MES_MD_SPEC
     subgraphs: []
     dependencies: {}
+          
+  pipelines/PPLN_MES_MD_PROD_1:
+                name: PPLN_MES_MD_PROD_1_mec
+                description: Mapping pipeline  ['mec']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_PROD
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_PROD_2:
+                name: PPLN_MES_MD_PROD_2_cmw_mdy
+                description: Mapping pipeline  ['cmw', 'mdy']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_PROD
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_PROD_3:
+                name: PPLN_MES_MD_PROD_3_mvc
+                description: Mapping pipeline  ['mvc']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_PROD
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_PROD_4:
+                name: PPLN_MES_MD_PROD_4_meb
+                description: Mapping pipeline  ['meb']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_PROD
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_PROD_5:
+                name: PPLN_MES_MD_PROD_5_mei
+                description: Mapping pipeline  ['mei']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_PROD
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_PROD_6:
+                name: PPLN_MES_MD_PROD_6_mer
+                description: Mapping pipeline  ['mer']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_PROD
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_PROD_7:
+                name: PPLN_MES_MD_PROD_7_mej
+                description: Mapping pipeline  ['mej']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_PROD
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_PROD_8:
+                name: PPLN_MES_MD_PROD_8_mes
+                description: Mapping pipeline  ['mes']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_PROD
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_PROD_9:
+                name: PPLN_MES_MD_PROD_9_mem_mmt
+                description: Mapping pipeline  ['mem', 'mmt']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_PROD
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_PROD_10:
+                name: PPLN_MES_MD_PROD_10_mns
+                description: Mapping pipeline  ['mns']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_PROD
+                dependencies: {}
+    
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
