--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -386,6 +386,36 @@ pipelines:
       - datasets/MES_MD_SPEC
     subgraphs: []
     dependencies: {}
+
+  pipelines/PPLN_MES_MD_RECIPE_SPEC_ITM_1:
+                name: PPLN_MES_MD_RECIPE_SPEC_ITM_1_cmw_mdy_mer_mej_mes
+                description: Mapping pipeline  ['cmw', 'mdy', 'mer', 'mej', 'mes']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_RECIPE_SPEC_ITM
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_RECIPE_SPEC_ITM_2:
+                name: PPLN_MES_MD_RECIPE_SPEC_ITM_2_meb_mem_mmt_mns
+                description: Mapping pipeline  ['meb', 'mem', 'mmt', 'mns']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_RECIPE_SPEC_ITM
+                dependencies: {}
+            
+          
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
