--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -386,6 +386,37 @@ pipelines:
       - datasets/MES_MD_SPEC
     subgraphs: []
     dependencies: {}
+
+  pipelines/PPLN_MES_MD_REMV_HIST_DTL_1:
+                name: PPLN_MES_MD_REMV_HIST_DTL_1_mvc_mer
+                description: Mapping pipeline  ['mvc', 'mer']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_REMV_HIST_DTL
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_REMV_HIST_DTL_2:
+                name: PPLN_MES_MD_REMV_HIST_DTL_2_mmt
+                description: Mapping pipeline  ['mmt']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_REMV_HIST_DTL
+                dependencies: {}
+            
+  
+     
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
