--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -386,6 +386,78 @@ pipelines:
       - datasets/MES_MD_SPEC
     subgraphs: []
     dependencies: {}
+    
+        
+  pipelines/PPLN_MES_MD_RSRS_1:
+                name: PPLN_MES_MD_RSRS_1_mec
+                description: Mapping pipeline  ['mec']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_RSRS
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_RSRS_2:
+                name: PPLN_MES_MD_RSRS_2_cmw_mdy
+                description: Mapping pipeline  ['cmw', 'mdy']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_RSRS
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_RSRS_3:
+                name: PPLN_MES_MD_RSRS_3_mvc
+                description: Mapping pipeline  ['mvc']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_RSRS
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_RSRS_4:
+                name: PPLN_MES_MD_RSRS_4_mer
+                description: Mapping pipeline  ['mer']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_RSRS
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_RSRS_5:
+                name: PPLN_MES_MD_RSRS_5_mmt
+                description: Mapping pipeline  ['mmt']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_RSRS
+                dependencies: {}
+   
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
