--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -386,6 +386,50 @@ pipelines:
       - datasets/MES_MD_SPEC
     subgraphs: []
     dependencies: {}
+
+  pipelines/PPLN_MES_MD_DATA_PT_1:
+                name: PPLN_MES_MD_DATA_PT_1_mec
+                description: Mapping pipeline  ['mec']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_DATA_PT
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_DATA_PT_2:
+                name: PPLN_MES_MD_DATA_PT_2_mej
+                description: Mapping pipeline  ['mej']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_DATA_PT
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_DATA_PT_3:
+                name: PPLN_MES_MD_DATA_PT_3_mem
+                description: Mapping pipeline  ['mem']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_DATA_PT
+                dependencies: {}
+            
+
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
