--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -386,6 +386,81 @@ pipelines:
       - datasets/MES_MD_SPEC
     subgraphs: []
     dependencies: {}
+   
+  pipelines/PPLN_MES_MD_DATA_PT_HIST_1:
+                name: PPLN_MES_MD_DATA_PT_HIST_1_mec
+                description: Mapping pipeline  ['mec']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_DATA_PT_HIST
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_DATA_PT_HIST_2:
+                name: PPLN_MES_MD_DATA_PT_HIST_2_cmw
+                description: Mapping pipeline  ['cmw']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_DATA_PT_HIST
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_DATA_PT_HIST_3:
+                name: PPLN_MES_MD_DATA_PT_HIST_3_meb_mem_mns
+                description: Mapping pipeline  ['meb', 'mem', 'mns']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_DATA_PT_HIST
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_DATA_PT_HIST_4:
+                name: PPLN_MES_MD_DATA_PT_HIST_4_mdy_mei_mer_mej_mes
+                description: Mapping pipeline  ['mdy', 'mei', 'mer', 'mej', 'mes']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_DATA_PT_HIST
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_DATA_PT_HIST_5:
+                name: PPLN_MES_MD_DATA_PT_HIST_5_mmt
+                description: Mapping pipeline  ['mmt']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_DATA_PT_HIST
+                dependencies: {}
+            
+
+     
+         
+
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
