--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -386,6 +386,37 @@ pipelines:
       - datasets/MES_MD_SPEC
     subgraphs: []
     dependencies: {}
+
+  pipelines/PPLN_MES_MD_PROD_FMLY_1:
+                name: PPLN_MES_MD_PROD_FMLY_1_mes_cmw_meb_mdy_mei_mer_mej_mem_mmt_mns
+                description: Mapping pipeline  ['mes', 'cmw', 'meb', 'mdy', 'mei', 'mer', 'mej', 'mem', 'mmt', 'mns']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_PROD_FMLY
+                dependencies: {}
+            
+  pipelines/PPLN_MES_MD_PROD_FMLY_2:
+                name: PPLN_MES_MD_PROD_FMLY_2_mvc_mec
+                description: Mapping pipeline  ['mvc', 'mec']
+                author: skostadi@its.jnj.com
+                mode: batch
+                language: python
+                createdAt: '2023-03-21 17:29:57'
+                modifiedAt: '2023-03-21 17:51:22'
+                datasets:
+                  inputs: []
+                  outputs:
+                        - datasets/MES_MD_PROD_FMLY
+                dependencies: {}
+            
+
+            
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
