--- a/src/datasets/MD_MATL_LOC/pbt_aspects.yml
+++ b/src/datasets/MD_MATL_LOC/pbt_aspects.yml
@@ -23,7 +23,84 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: VAR_CNTL_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: AUTO_PO_IND
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PRCTR_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SRC_LIST_IND
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LD_GRP_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: QUAL_MGMT_CNTL_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: REORDR_QTY
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: COST_LOT_SIZE_VAL
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SERIZATION_PRFL_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: SPEC_MATL_PLNT_STS_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SPEC_MATL_PLNT_STS_DTTM
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: DEL_IND
     type: string
     nullable: true
     metadata:
@@ -44,6 +121,20 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: PRDTN_SUPR_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PRDTN_UOM_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: MATL_ABC_CLSN_CD
     type: string
     nullable: true
@@ -52,6 +143,20 @@ schema:
       mappings: []
       tags: []
   - name: AVLBLTY_CHK_IND
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SFTY_TIME_IND
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SPL_PRCMT_TYPE_CD
     type: string
     nullable: true
     metadata:
@@ -79,6 +184,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: PLNG_STRTGY_GRP_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: RD_VAL_QTY
     type: decimal(18,4)
     nullable: true
@@ -87,6 +199,13 @@ schema:
       mappings: []
       tags: []
   - name: LOT_SIZE_FX_QTY
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: GOOD_RCPT_LEAD_DAYS_QTY
     type: decimal(18,4)
     nullable: true
     metadata:
@@ -121,7 +240,28 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: MAX_STK_LVL_QTY
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SFTY_TIME_DAYS_CNT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: PLAN_DELV_DAYS_CNT
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SCRAP_PCT
     type: decimal(18,4)
     nullable: true
     metadata:
@@ -135,7 +275,42 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: MSTR_PLNG_FMLY_CD
+  - name: MIN_SFTY_STK_QTY
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: BKWRD_CNSMPTN_DAYS_CNT
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: FRWD_CNSMPTN_DAYS_CNT
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CNSMPTN_MODE_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PRCHSNG_GRP_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ALT_BOM
     type: string
     nullable: true
     metadata:
