JEKT-314 🔁 pasted other pipeline gems just as a template     - Pipeline        - SAP_MD_DELV_LINE_MBP

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -78,10 +78,16 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-05 18:45:30'
-    modifiedAt: '2023-04-05 18:45:42'
+    modifiedAt: '2023-04-06 11:02:47'
     datasets:
-      inputs: []
-      outputs: []
+      inputs:
+      - datasets/DS_SAP_02_TVM4T
+      - datasets/DS_SAP_03_VBUP
+      - datasets/DS_SAP_04_LIKP
+      - datasets/DS_SAP_04_LIPS
+      - datasets/DS_SAP_04_VBAK
+      outputs:
+      - datasets/MD_DELV_LINE
     subgraphs: []
     dependencies: {}
 datasets:
