JEKT-314 ❇️ New     - Dataset        - DS_SAP_03_TVM4T        - DS_SAP_04_VBUP        - DS_SAP_05_LIKP        - DS_SAP_05_LIPS        - DS_SAP_05_VBAK
🔁 Modified pipeline config settings
    - Pipeline
       - SAP_MD_DELV_LINE_MBP

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -78,14 +78,14 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-05 18:45:30'
-    modifiedAt: '2023-04-06 11:02:47'
+    modifiedAt: '2023-04-06 11:23:42'
     datasets:
       inputs:
-      - datasets/DS_SAP_02_TVM4T
-      - datasets/DS_SAP_03_VBUP
-      - datasets/DS_SAP_04_LIKP
-      - datasets/DS_SAP_04_LIPS
-      - datasets/DS_SAP_04_VBAK
+      - datasets/DS_SAP_03_TVM4T
+      - datasets/DS_SAP_04_VBUP
+      - datasets/DS_SAP_05_LIKP
+      - datasets/DS_SAP_05_LIPS
+      - datasets/DS_SAP_05_VBAK
       outputs:
       - datasets/MD_DELV_LINE
     subgraphs: []
@@ -301,6 +301,81 @@ datasets:
         author: jcovezd1@its.jnj.com
         createdAt: '2023-04-05 18:21:53'
         modifiedAt: '2023-04-05 18:21:53'
+  datasets/DS_SAP_05_LIPS:
+    name: DS_SAP_05_LIPS
+    description: ''
+    author: jcovezd1@its.jnj.com
+    createdAt: '2023-04-06 11:14:18'
+    modifiedAt: '2023-04-06 11:14:18'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcovezd1@its.jnj.com
+        createdAt: '2023-04-06 11:14:18'
+        modifiedAt: '2023-04-06 11:14:18'
+  datasets/DS_SAP_05_LIKP:
+    name: DS_SAP_05_LIKP
+    description: ''
+    author: jcovezd1@its.jnj.com
+    createdAt: '2023-04-06 11:15:11'
+    modifiedAt: '2023-04-06 11:15:11'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcovezd1@its.jnj.com
+        createdAt: '2023-04-06 11:15:11'
+        modifiedAt: '2023-04-06 11:15:11'
+  datasets/DS_SAP_05_VBAK:
+    name: DS_SAP_05_VBAK
+    description: ''
+    author: jcovezd1@its.jnj.com
+    createdAt: '2023-04-06 11:16:29'
+    modifiedAt: '2023-04-06 11:16:29'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcovezd1@its.jnj.com
+        createdAt: '2023-04-06 11:16:29'
+        modifiedAt: '2023-04-06 11:16:29'
+  datasets/DS_SAP_04_VBUP:
+    name: DS_SAP_04_VBUP
+    description: ''
+    author: jcovezd1@its.jnj.com
+    createdAt: '2023-04-06 11:17:58'
+    modifiedAt: '2023-04-06 11:17:58'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcovezd1@its.jnj.com
+        createdAt: '2023-04-06 11:17:58'
+        modifiedAt: '2023-04-06 11:17:58'
+  datasets/DS_SAP_03_TVM4T:
+    name: DS_SAP_03_TVM4T
+    description: ''
+    author: jcovezd1@its.jnj.com
+    createdAt: '2023-04-06 11:19:17'
+    modifiedAt: '2023-04-06 11:19:17'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcovezd1@its.jnj.com
+        createdAt: '2023-04-06 11:19:17'
+        modifiedAt: '2023-04-06 11:19:17'
 templates: {}
 jobs: {}
 functions:
