--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -109,7 +109,32 @@ datasets:
         createdAt: '2023-04-06 16:19:32'
         modifiedAt: '2023-04-06 16:19:32'
 templates: {}
-jobs: {}
+jobs:
+  jobs/JOB_MD_MATL_LOC:
+    name: JOB_MD_MATL_LOC
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/SAP_01_MD_MATL_LOC
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-04-06 16:25:12'
+    modifiedAt: '2023-04-06 16:25:34'
+    author: mbolado1@its.jnj.com
 functions:
   author: null
   createdAt: '2023-04-06 15:55:44'
