JEKT-402 Fixed issue with _pk_ not included in penultimate gem 🔁 Modified     - Pipeline        - MD_MATL_ALT_UOM_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR_SDJ        - MD_MATL_ALT_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI     - Dataset        - MD_MATL_ALT_UOM

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -66,13 +66,13 @@ pipelines:
     dependencies: {}
   pipelines/MD_MATL_ALT_UOM_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR_SDJ:
     name: MD_MATL_ALT_UOM_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR_SDJ
-    description: ''
+    description: JDE Systems for MD_MATL_ALT_UOM
     author: natkins7@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-05 09:54:31'
-    modifiedAt: '2023-04-06 11:39:49'
+    modifiedAt: '2023-04-06 16:13:32'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F41002
@@ -89,7 +89,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-05 11:55:35'
-    modifiedAt: '2023-04-06 10:44:29'
+    modifiedAt: '2023-04-06 16:35:22'
     datasets:
       inputs:
       - datasets/DS_SAP_01_MARM
@@ -1229,7 +1229,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-04-05 13:56:09'
+    modifiedAt: '2023-04-06 16:35:22'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
