--- a/src/datasets/MD_MATL_ALT_UOM/pbt_aspects.yml
+++ b/src/datasets/MD_MATL_ALT_UOM/pbt_aspects.yml
@@ -149,6 +149,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: _pk_
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: _pk_md5_
     type: string
     nullable: true
