--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -945,10 +945,15 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-05 13:20:43'
-    modifiedAt: '2023-04-05 13:24:46'
+    modifiedAt: '2023-04-06 20:08:37'
     datasets:
-      inputs: []
-      outputs: []
+      inputs:
+      - datasets/DS_SAP_01_MARA
+      - datasets/DS_SAP_01_NSDM_V_MARD
+      - datasets/DS_SAP_01_NSDM_V_MCHB
+      - datasets/DS_SAP_01_NSDM_V_MSKU
+      outputs:
+      - datasets/MD_MATL_INV
     subgraphs: []
     dependencies: {}
 datasets:
@@ -2157,7 +2162,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-03-20 18:20:04'
+    modifiedAt: '2023-04-06 20:08:37'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
