JEKT-296: source, configs and filters ❇️ New     - Dataset        - DS_SAP_01_EBKE
🔁 Modified
    - Pipeline
       - DART_L1_Purchase_Order_MD_PO_HIST
       - SAP_MD_PO_SCHED_LINE_DELV_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_HMD_MBP_MRS_P01_SVS_TAI_HMD

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -789,7 +789,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-03-17 14:47:12'
-    modifiedAt: '2023-04-03 13:47:05'
+    modifiedAt: '2023-04-06 20:21:11'
     datasets:
       inputs:
       - datasets/DS_SAP_01_EKET
@@ -821,9 +821,10 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-05 12:54:52'
-    modifiedAt: '2023-04-05 12:54:55'
+    modifiedAt: '2023-04-06 20:54:32'
     datasets:
-      inputs: []
+      inputs:
+      - datasets/DS_SAP_01_EBKE
       outputs: []
     subgraphs: []
     dependencies: {}
@@ -6078,6 +6079,21 @@ datasets:
         author: jcacere7@its.jnj.com
         createdAt: '2023-03-21 20:31:38'
         modifiedAt: '2023-03-21 20:31:38'
+  datasets/DS_SAP_01_EBKE:
+    name: DS_SAP_01_EBKE
+    description: ''
+    author: jcacere7@its.jnj.com
+    createdAt: '2023-04-06 13:16:05'
+    modifiedAt: '2023-04-06 20:18:38'
+    mode: batch
+    physicalDatasets:
+      dev_ajp_nonprod:
+        fabricId: 4
+        datasetType: Database
+        description: ''
+        author: jcacere7@its.jnj.com
+        createdAt: '2023-04-06 13:16:05'
+        modifiedAt: '2023-04-06 13:16:05'
 templates: {}
 jobs:
   jobs/JOB_TBL_STRCT_MD:
