JEKT-1211- New Pipeline, Source Dataset with SAP Config Parameters set up for 13 systems     - Pipeline        - SAP_MD_MATL_BOM     - Dataset        - SAP_01_MAST
🔁 Modified
    - Dataset
       - MD_MATL_BOM

--- a/src/datasets/SAP_01_MAST/pbt_aspects.yml
+++ b/src/datasets/SAP_01_MAST/pbt_aspects.yml
@@ -2,114 +2,100 @@ version: 1
 schema:
   type: struct
   fields:
-  - name: SRC_SYS_CD
-    type: string
-    nullable: false
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MATL_NUM
+  - name: MANDT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: PLNT_CD
+  - name: _deleted_
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: BOM_USG_CD
+  - name: WERKS
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: BOM_NUM
+  - name: STLNR
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ALT_BOM_NUM
+  - name: STLAN
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: CRT_DTTM
-    type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: CHG_DTTM
-    type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: FROM_LOT_SIZE_QTY
-    type: decimal(18,4)
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: TO_LOT_SIZE_QTY
-    type: decimal(18,4)
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: USER_WHO_CRT_REC
+  - name: STLAL
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: NM_OF_PRSN_WHO_CHG_OBJ
+  - name: MATNR
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: CNFG_MATL_IN
+  - name: LOSVN
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: DAI_ETL_ID
-    type: integer
-    nullable: false
+  - name: LOSBS
+    type: string
+    nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: DAI_CRT_DTTM
-    type: timestamp
-    nullable: false
+  - name: ANDAT
+    type: string
+    nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: DAI_UPDT_DTTM
-    type: timestamp
-    nullable: false
+  - name: ANNAM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: AEDAT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: AENAM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CSLTY
+    type: string
+    nullable: true
     metadata:
       description: ''
       mappings: []
@@ -121,30 +107,37 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: _deleted_
-    type: string
-    nullable: false
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: _l0_upt_
+  - name: _upt_
     type: timestamp
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: _pk_md5_
-    type: string
+  - name: _kafkaOffset_
+    type: long
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: _l1_upt_
+  - name: _createTime_
     type: timestamp
-    nullable: false
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _kafkaTimestamp_
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _infa_bigint_sequence_
+    type: string
+    nullable: true
     metadata:
       description: ''
       mappings: []
