--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -386,6 +386,22 @@ pipelines:
       - datasets/MES_MD_SPEC
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_MD_MATL_BOM:
+    name: SAP_MD_MATL_BOM
+    description: ''
+    author: smille29@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-06 19:35:46'
+    modifiedAt: '2023-04-06 21:05:37'
+    datasets:
+      inputs:
+      - datasets/SAP_01_MAST
+      outputs:
+      - datasets/MD_MATL_BOM
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -1247,7 +1263,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-03-20 18:20:04'
+    modifiedAt: '2023-04-06 20:45:57'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -3087,6 +3103,21 @@ datasets:
         author: smille29@its.jnj.com
         createdAt: '2023-03-23 22:07:05'
         modifiedAt: '2023-03-23 22:07:05'
+  datasets/SAP_01_MAST:
+    name: SAP_01_MAST
+    description: ''
+    author: smille29@its.jnj.com
+    createdAt: '2023-04-06 20:24:40'
+    modifiedAt: '2023-04-06 20:24:40'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: smille29@its.jnj.com
+        createdAt: '2023-04-06 20:24:40'
+        modifiedAt: '2023-04-06 20:24:40'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
