JEKT-1211 - created Job for Object and added 13 SAP source systems     - Job        - JOB_MD_MATL_BOM

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -3878,6 +3878,31 @@ jobs:
     createdAt: '2023-04-04 15:45:43'
     modifiedAt: '2023-04-04 18:50:01'
     author: smille29@its.jnj.com
+  jobs/JOB_MD_MATL_BOM:
+    name: JOB_MD_MATL_BOM
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/SAP_MD_MATL_BOM
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-04-06 21:07:36'
+    modifiedAt: '2023-04-06 21:12:21'
+    author: smille29@its.jnj.com
 functions:
   author: null
   createdAt: '2023-03-24 15:42:34'
