--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -3532,6 +3532,32 @@ jobs:
     createdAt: '2023-03-28 17:29:19'
     modifiedAt: '2023-04-04 04:58:59'
     author: smille29@its.jnj.com
+  jobs/JOB_MD_MATL_LOC:
+    name: JOB_MD_MATL_LOC
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/MD_MATL_ALT_UOM_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR_SDJ
+    - pipelines/MD_MATL_ALT_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-04-07 09:26:56'
+    modifiedAt: '2023-04-07 09:37:09'
+    author: natkins7@its.jnj.com
 functions:
   author: null
   createdAt: '2023-03-24 15:42:34'
