JEKT-296 🔁 Modified     - Pipeline        - DART_L1_Purchase_Order_MD_PO_HIST     - Dataset        - MD_PO_HIST

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -821,11 +821,12 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-05 12:54:52'
-    modifiedAt: '2023-04-06 22:02:08'
+    modifiedAt: '2023-04-07 14:43:40'
     datasets:
       inputs:
       - datasets/DS_SAP_01_EBKE
-      outputs: []
+      outputs:
+      - datasets/MD_PO_HIST
     subgraphs: []
     dependencies: {}
 datasets:
@@ -2649,7 +2650,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-03-20 18:20:04'
+    modifiedAt: '2023-04-07 14:43:40'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
