JEKT-314 ❇️ New     - Job        - JOB_MD_DELV_LINE

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -377,7 +377,35 @@ datasets:
         createdAt: '2023-04-06 11:19:17'
         modifiedAt: '2023-04-06 11:19:17'
 templates: {}
-jobs: {}
+jobs:
+  jobs/JOB_MD_DELV_LINE:
+    name: JOB_MD_DELV_LINE
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/SAP_MD_DELV_LINE_FSN_GEU_HCS_MRS_P01_SVS_ATL
+    - pipelines/SAP_MD_DELV_LINE_BBA_BBL_BBN
+    - pipelines/SAP_MD_DELV_LINE_BWI_TAI
+    - pipelines/SAP_MD_DELV_LINE_MBP
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-04-07 15:21:32'
+    modifiedAt: '2023-04-07 15:28:23'
+    author: jcovezd1@its.jnj.com
 functions:
   author: null
   createdAt: '2023-03-31 15:58:58'
