🔁 JEKT-305     - Pipeline        - SAP_01_MD_SHIP     - Dataset        - MD_SHIP

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -20,12 +20,11 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-04 03:27:53'
-    modifiedAt: '2023-04-07 15:15:12'
+    modifiedAt: '2023-04-07 16:04:17'
     datasets:
       inputs:
       - datasets/DS_SAP_01_VTTK
-      outputs:
-      - datasets/MD_SHIP
+      outputs: []
     subgraphs: []
     dependencies: {}
 datasets:
@@ -49,7 +48,7 @@ datasets:
     description: ''
     author: hgermi1@its.jnj.com
     createdAt: '2023-04-07 14:42:10'
-    modifiedAt: '2023-04-07 15:06:00'
+    modifiedAt: '2023-04-07 15:33:00'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
