🔁 JEKT-305     - Pipeline runs successfully on BBN, BBL, P01 and HCS        - SAP_01_MD_SHIP     - Dataset        - MD_SHIP

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1225,11 +1225,12 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-04 03:27:53'
-    modifiedAt: '2023-04-07 16:04:17'
+    modifiedAt: '2023-04-07 16:59:31'
     datasets:
       inputs:
       - datasets/DS_SAP_01_VTTK
-      outputs: []
+      outputs:
+      - datasets/MD_SHIP
     subgraphs: []
     dependencies: {}
 datasets:
@@ -1958,7 +1959,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-03-20 18:20:04'
+    modifiedAt: '2023-04-07 16:09:01'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
