JEKT-176 (Configured Union and Lookup) ❇️ New     - Dataset        - DS_SAP_07_MARA        - DS_SAP_02_MCHB        - DS_SAP_03_MSKU        - DS_SAP_01_MARD
🔁 Modified
    - Pipeline
       - SAP_MD_MATL_INV_P01

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -945,13 +945,13 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-05 13:20:43'
-    modifiedAt: '2023-04-07 16:53:44'
+    modifiedAt: '2023-04-07 19:54:10'
     datasets:
       inputs:
-      - datasets/DS_SAP_01_MARA
-      - datasets/DS_SAP_01_NSDM_V_MARD
-      - datasets/DS_SAP_01_NSDM_V_MCHB
-      - datasets/DS_SAP_01_NSDM_V_MSKU
+      - datasets/DS_SAP_01_MARD
+      - datasets/DS_SAP_02_MCHB
+      - datasets/DS_SAP_03_MSKU
+      - datasets/DS_SAP_07_MARA
       outputs:
       - datasets/MD_MATL_INV
     subgraphs: []
@@ -6237,6 +6237,66 @@ datasets:
         author: skostadi@its.jnj.com
         createdAt: '2023-03-20 18:20:04'
         modifiedAt: '2023-03-20 18:20:04'
+  datasets/DS_SAP_01_MARD:
+    name: DS_SAP_01_MARD
+    description: ''
+    author: ypatel8@its.jnj.com
+    createdAt: '2023-04-07 18:12:36'
+    modifiedAt: '2023-04-07 19:09:27'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: ypatel8@its.jnj.com
+        createdAt: '2023-04-07 18:12:36'
+        modifiedAt: '2023-04-07 18:12:36'
+  datasets/DS_SAP_02_MCHB:
+    name: DS_SAP_02_MCHB
+    description: ''
+    author: ypatel8@its.jnj.com
+    createdAt: '2023-04-07 19:12:27'
+    modifiedAt: '2023-04-07 19:12:27'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: ypatel8@its.jnj.com
+        createdAt: '2023-04-07 19:12:27'
+        modifiedAt: '2023-04-07 19:12:27'
+  datasets/DS_SAP_03_MSKU:
+    name: DS_SAP_03_MSKU
+    description: ''
+    author: ypatel8@its.jnj.com
+    createdAt: '2023-04-07 19:19:22'
+    modifiedAt: '2023-04-07 19:19:22'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: ypatel8@its.jnj.com
+        createdAt: '2023-04-07 19:19:22'
+        modifiedAt: '2023-04-07 19:19:22'
+  datasets/DS_SAP_07_MARA:
+    name: DS_SAP_07_MARA
+    description: ''
+    author: ypatel8@its.jnj.com
+    createdAt: '2023-04-07 19:31:01'
+    modifiedAt: '2023-04-07 19:31:01'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: ypatel8@its.jnj.com
+        createdAt: '2023-04-07 19:31:01'
+        modifiedAt: '2023-04-07 19:31:01'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
