JEKT-176 (Added new Data Sources) ❇️ New     - Dataset        - DS_SAP_04_MKOL        - DS_SAP_01_MKOL_4        - DS_SAP_05_MSLB        - DS_SAP_06_MSSL
🔁 Modified
    - Pipeline
       - SAP_MD_MATL_INV_P01

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -945,12 +945,15 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-05 13:20:43'
-    modifiedAt: '2023-04-07 19:54:10'
+    modifiedAt: '2023-04-07 21:12:57'
     datasets:
       inputs:
       - datasets/DS_SAP_01_MARD
       - datasets/DS_SAP_02_MCHB
       - datasets/DS_SAP_03_MSKU
+      - datasets/DS_SAP_04_MKOL
+      - datasets/DS_SAP_05_MSLB
+      - datasets/DS_SAP_06_MSSL
       - datasets/DS_SAP_07_MARA
       outputs:
       - datasets/MD_MATL_INV
@@ -6297,6 +6300,66 @@ datasets:
         author: ypatel8@its.jnj.com
         createdAt: '2023-04-07 19:31:01'
         modifiedAt: '2023-04-07 19:31:01'
+  datasets/DS_SAP_01_MKOL_4:
+    name: DS_SAP_01_MKOL_4
+    description: ''
+    author: ypatel8@its.jnj.com
+    createdAt: '2023-04-07 20:41:32'
+    modifiedAt: '2023-04-07 20:41:32'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: ypatel8@its.jnj.com
+        createdAt: '2023-04-07 20:41:32'
+        modifiedAt: '2023-04-07 20:41:32'
+  datasets/DS_SAP_04_MKOL:
+    name: DS_SAP_04_MKOL
+    description: ''
+    author: ypatel8@its.jnj.com
+    createdAt: '2023-04-07 20:44:59'
+    modifiedAt: '2023-04-07 21:00:23'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: ypatel8@its.jnj.com
+        createdAt: '2023-04-07 20:44:59'
+        modifiedAt: '2023-04-07 20:44:59'
+  datasets/DS_SAP_05_MSLB:
+    name: DS_SAP_05_MSLB
+    description: ''
+    author: ypatel8@its.jnj.com
+    createdAt: '2023-04-07 20:56:06'
+    modifiedAt: '2023-04-07 21:00:10'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: ypatel8@its.jnj.com
+        createdAt: '2023-04-07 20:56:06'
+        modifiedAt: '2023-04-07 20:56:06'
+  datasets/DS_SAP_06_MSSL:
+    name: DS_SAP_06_MSSL
+    description: ''
+    author: ypatel8@its.jnj.com
+    createdAt: '2023-04-07 20:59:30'
+    modifiedAt: '2023-04-07 21:00:00'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: ypatel8@its.jnj.com
+        createdAt: '2023-04-07 20:59:30'
+        modifiedAt: '2023-04-07 20:59:30'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
