JEKT-176 (Added 3 Tables to the Union) 🔁 Modified     - Dataset        - DS_SAP_06_MSSL        - MD_MATL_INV        - DS_SAP_05_MSLB        - DS_SAP_04_MKOL     - Pipeline        - SAP_MD_MATL_INV_P01

--- a/src/datasets/MD_MATL_INV/pbt_aspects.yml
+++ b/src/datasets/MD_MATL_INV/pbt_aspects.yml
@@ -46,7 +46,7 @@ schema:
       tags: []
   - name: BTCH_STS_CD
     type: string
-    nullable: false
+    nullable: true
     metadata:
       description: ''
       mappings: []
