--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -46,6 +46,23 @@ pipelines:
       - datasets/MD_SUP_PRCHSNG_ORG
     subgraphs: []
     dependencies: {}
+  pipelines/JDE_01_F0401_DJD:
+    name: JDE_01_F0401_DJD
+    description: ''
+    author: lsorarra@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-07 18:11:24'
+    modifiedAt: '2023-04-07 18:17:47'
+    datasets:
+      inputs:
+      - datasets/DS_JDE_01_F0401
+      - datasets/DS_JDE_F0101_adt
+      outputs:
+      - datasets/MD_SUP_PRCHSNG_ORG
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/DS_JDE_01_F0401:
     name: DS_JDE_01_F0401
