JEKT-176 (Added P01 system to the Job) 🔁 Modified     - Job        - JOB_MD_MATL_INV_HM2        - JOB_MD_MATL_INV

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -7753,7 +7753,7 @@ jobs:
       clusterId: null
     enabled: null
     createdAt: '2023-04-05 13:09:51'
-    modifiedAt: '2023-04-07 00:09:41'
+    modifiedAt: '2023-04-10 13:29:49'
     author: ypatel8@its.jnj.com
   jobs/JOB_MD_DELV_LINE:
     name: JOB_MD_DELV_LINE
@@ -7800,13 +7800,14 @@ jobs:
       onFailure: false
     pipelines:
     - pipelines/JDE_01_MD_MATL_INV
+    - pipelines/SAP_MD_MATL_INV_P01
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: false
     createdAt: '2023-04-04 14:54:35'
-    modifiedAt: '2023-04-04 15:03:36'
+    modifiedAt: '2023-04-10 13:34:45'
     author: natkins7@its.jnj.com
   jobs/JOB_TBL_STRCT_MD:
     name: JOB_TBL_STRCT_MD
