JEKT-1211 - JDE Pipeline and Job setup.  Still need to integrate the Config variables to the Source GEM to work for al source systems     - Pipeline        - JDE_01_MD_MATL_BOM     - Dataset        - JDE_01_f3002_f3002_adt     - Job        - JDE_01_MD_MATL_BOM
🔁 Modified
    - Dataset
       - MD_MATL_BOM

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1155,6 +1155,22 @@ pipelines:
       - datasets/MD_MATL_BOM
     subgraphs: []
     dependencies: {}
+  pipelines/JDE_01_MD_MATL_BOM:
+    name: JDE_01_MD_MATL_BOM
+    description: ''
+    author: smille29@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-10 13:15:01'
+    modifiedAt: '2023-04-10 15:54:07'
+    datasets:
+      inputs:
+      - datasets/JDE_01_f3002_f3002_adt
+      outputs:
+      - datasets/MD_MATL_BOM
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -2016,7 +2032,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-03-20 18:20:04'
+    modifiedAt: '2023-04-10 15:54:07'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -6511,6 +6527,21 @@ datasets:
         author: smille29@its.jnj.com
         createdAt: '2023-04-06 20:24:40'
         modifiedAt: '2023-04-06 20:24:40'
+  datasets/JDE_01_f3002_f3002_adt:
+    name: JDE_01_f3002_f3002_adt
+    description: ''
+    author: smille29@its.jnj.com
+    createdAt: '2023-04-10 13:17:10'
+    modifiedAt: '2023-04-10 13:17:10'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: smille29@its.jnj.com
+        createdAt: '2023-04-10 13:17:10'
+        modifiedAt: '2023-04-10 13:17:10'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
@@ -7408,6 +7439,30 @@ jobs:
     enabled: null
     createdAt: '2023-04-06 21:07:36'
     modifiedAt: '2023-04-06 21:12:21'
+    author: smille29@its.jnj.com
+  jobs/JDE_01_MD_MATL_BOM:
+    name: JDE_01_MD_MATL_BOM
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines: []
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-04-06 21:21:25'
+    modifiedAt: '2023-04-06 21:21:29'
     author: smille29@its.jnj.com
 functions:
   author: null
