JEKT-323 Job creation for SAP src_sys ❇️ New     - Job        - JOB_MD_SLS_DOC_PTNR_FUNC
🔁 Modified
    - Pipeline
       - SAP_01_MD_SLS_DOC_PTNR_FUNC

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -394,7 +394,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-06 16:52:54'
-    modifiedAt: '2023-04-07 12:21:48'
+    modifiedAt: '2023-04-10 12:08:31'
     datasets:
       inputs:
       - datasets/DS_SAP_01_VBAK
@@ -3894,6 +3894,31 @@ jobs:
     createdAt: '2023-04-04 15:45:43'
     modifiedAt: '2023-04-04 18:50:01'
     author: smille29@its.jnj.com
+  jobs/JOB_MD_SLS_DOC_PTNR_FUNC:
+    name: JOB_MD_SLS_DOC_PTNR_FUNC
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/SAP_01_MD_SLS_DOC_PTNR_FUNC
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-04-10 15:57:31'
+    modifiedAt: '2023-04-10 16:03:41'
+    author: mbolado1@its.jnj.com
 functions:
   author: null
   createdAt: '2023-03-24 15:42:34'
