JEKT-1211 - Finalized Job for MD_MATL_BOM to include JDE pipeline and fixed syntax for JDE Pipeline in the SchemaTransform GEM.  Set the Config Variables in Source GEM for JDE     - Job        - JDE_01_MD_MATL_BOM
🔁 Modified
    - Pipeline
       - JDE_01_MD_MATL_BOM
    - Dataset
       - JDE_01_f3002_f3002_adt
    - Job
       - JOB_MD_MATL_BOM

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -429,7 +429,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-10 13:15:01'
-    modifiedAt: '2023-04-10 15:54:07'
+    modifiedAt: '2023-04-10 16:07:04'
     datasets:
       inputs:
       - datasets/JDE_01_f3002_f3002_adt
@@ -3218,7 +3218,7 @@ datasets:
     description: ''
     author: smille29@its.jnj.com
     createdAt: '2023-04-10 13:17:10'
-    modifiedAt: '2023-04-10 13:17:10'
+    modifiedAt: '2023-04-10 16:00:21'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -4029,6 +4029,7 @@ jobs:
       onSuccess: false
       onFailure: false
     pipelines:
+    - pipelines/JDE_01_MD_MATL_BOM
     - pipelines/SAP_MD_MATL_BOM
     jobClusterMode:
       clusterMode:
@@ -4036,31 +4037,7 @@ jobs:
       clusterId: null
     enabled: null
     createdAt: '2023-04-06 21:07:36'
-    modifiedAt: '2023-04-06 21:12:21'
-    author: smille29@its.jnj.com
-  jobs/JDE_01_MD_MATL_BOM:
-    name: JDE_01_MD_MATL_BOM
-    description: ''
-    fabricUID: 32
-    scheduler:
-      Databricks: {}
-    cloudProvider: null
-    jobSize: Prophecy_Small
-    scheduleCron: 0 0 0 1/1 * ? *
-    timeout: null
-    alerting:
-      emails: ''
-      onStart: false
-      onSuccess: false
-      onFailure: false
-    pipelines: []
-    jobClusterMode:
-      clusterMode:
-        Single: {}
-      clusterId: null
-    enabled: null
-    createdAt: '2023-04-06 21:21:25'
-    modifiedAt: '2023-04-06 21:21:29'
+    modifiedAt: '2023-04-10 16:20:36'
     author: smille29@its.jnj.com
 functions:
   author: null
