JEKT-136 🔁 Modified     - Pipeline        - SAP_01_MD_SLS_ORDR_LINE     - Dataset        - MD_SLS_ORDR_LINE

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1279,7 +1279,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-03-20 12:41:02'
-    modifiedAt: '2023-04-10 16:32:38'
+    modifiedAt: '2023-04-10 16:38:39'
     datasets:
       inputs:
       - datasets/DS_SAP_01_TVAGT
@@ -1295,7 +1295,8 @@ pipelines:
       - datasets/DS_SAP_01_VBAK
       - datasets/DS_SAP_01_VBAP
       - datasets/DS_SAP_01_VBKD
-      outputs: []
+      outputs:
+      - datasets/MD_SLS_ORDR_LINE
     subgraphs: []
     dependencies: {}
 datasets:
@@ -1889,7 +1890,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-03-20 18:20:04'
+    modifiedAt: '2023-04-10 16:38:39'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
